bdr.BDR2.scala.error
Compilation error:
BDR2:1: error: Missing closing brace `}' assumed here
var i =0
^BDR2:4: error: '}' expected but 'case' found.
  case move="R" => Right() forward()
  ^BDR2:5: error: illegal start of definition
  case move="L" => Left() forward()
  ^BDR2:6: error: illegal start of definition
  case move="I" => Right() Righ() forward()
  ^BDR2:7: error: illegal start of definition
  case move="A" => forward()
  ^BDR2:8: error: illegal start of definition
  case move="B" => forward() forward()
  ^BDR2:9: error: illegal start of definition
  case move="C" => forward() forward() forward()
  ^BDR2:10: error: illegal start of definition
  case move="D" => forward() forward() forward() forward()
  ^BDR2:11: error: illegal start of definition
  case move="E" =>forward() forward() forward()  forward() forward() 
  ^BDR2:12: error: illegal start of definition
  case move="F" =>forward() forward() forward() forward() forward() forward()
  ^BDR2:13: error: illegal start of definition
  case move="Z" =>backward()
  ^BDR2:14: error: illegal start of definition
  case move="Z" =>backward() backward()
  ^BDR2:15: error: illegal start of definition
  case move="Z" =>backward() backward() backward()
  ^BDR2:16: error: illegal start of definition
  case move="Z" =>backward() backward() backward() backward()
  ^BDR2:17: error: illegal start of definition
  case move="Z" =>backward() backward() backward() backward() backward()
  ^BDR2:18: error: illegal start of definition
  case move="Z" =>backward()backward() backward() backward() backward() backward() 
  ^BDR2:21: error: eof expected but '}' found.
}
^