bdr.BDR2.scala.code
var i =0
while (i==0){
  var move= ReadMessage() 
  case move="R" => Right() forward()
  case move="L" => Left() forward()
  case move="I" => Right() Righ() forward()
  case move="A" => forward()
  case move="B" => forward() forward()
  case move="C" => forward() forward() forward()
  case move="D" => forward() forward() forward() forward()
  case move="E" =>forward() forward() forward()  forward() forward() 
  case move="F" =>forward() forward() forward() forward() forward() forward()
  case move="Z" =>backward()
  case move="Z" =>backward() backward()
  case move="Z" =>backward() backward() backward()
  case move="Z" =>backward() backward() backward() backward()
  case move="Z" =>backward() backward() backward() backward() backward()
  case move="Z" =>backward()backward() backward() backward() backward() backward()